# bcos-framework

./: CMakeLists.txt  README.md
.github/workflows/: workflow.yml
libprotocol/: CMakeLists.txt  Common.h  LogEntry.h  TransactionStatus.cpp  TransactionStatus.h  TransactionWrapper.cpp  TransactionWrapper.h
libprotocol/bcos-proto/: TransactionReceipt.proto
libprotocol/protobuf/: PBTransactionReceipt.cpp  PBTransactionReceipt.h  ScaleTransactionReceipt.cpp  ScaleTransactionReceipt.h
test/unittests/libprotocol/: ScaleTransactionReceiptTest.cpp
